2023-03-20  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problem in OUTFIL SAVE Option 
    * Updated testcase COBOL source 
    * Updated header files to include libcob.h

2023-02-20  Sauro Menna  <smenna@users.sourceforge.net>
    * New test case EBCDIC option 
    * Modify test case to support libcob 3.2 library and earlier versions
    * Modify gcsysop.c to get GNUCobol version
    * To enable testcase EBCDIC get version from output gcsysop   
    * Fix memory Leaks in E15 and E35 function
    * Use cob_tiny function to terminate the Cobol RTS (Thanks to Chuck Haatvedt)
    * Test - Fix take file somisqfch01_take.prm, somisqfmlt03_take.prm
    * FIX FINDREP Control statement (Thanks David Declerck) Enable format 'FINDREP = ( arg1, .... )'
    * job.c fix memory leaks, utils.c assign NULL in free function
    
2023-01-25  David Declerck  <david.declerck@ocamlpro.com>
    * Update EBCDIC table handling through the -febcdic-table option to account for the changes in GnuCOBOL 3.2

2023-01-04  David Declerck  <david.declerck@ocamlpro.com>
    * New options -fcolseq and -febcdic-table allowing to specify the collating sequence (ASCII/EBCDIC) and EBCDIC table to use for character comparisons (available only if using libcob 3.2)

2022-12-01  Sauro Menna  <smenna@users.sourceforge.net>
    * Fixed problem with packed-decimal length

2022-11-27  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.04
    * Fix problem in field compare with fsign=EBCDIC/ASCII

2022-11-14  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.04
    * Fixed reference to __LIBCOB_VERSION and __LIBCOB_VERSION_MINOR
      (Thanks to Simon Sobisch)
    * New option FINDREP in INREC and OUTREC control statement
    * New test case FINDREP
    * New File-status management with compatibility for GnuCOBOL 3.2 
      (Thanks to Chuck Haatvedt & Arnold Trembley)
    * Redirecting error messages to stdout 
    * Fixed errors on files used in test environments
